[pom] Support jdk9 javaagents